crates/cash-parser/src/parser/tests/snapshots/cash_parser__parser__tests__assignments__parse_assignment_single_quoted.snap
---
source: cash-parser/src/parser/tests/assignments.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "x=\'hello world\'",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                prefix: Some(CommandPrefix([
                  AssignmentWord(Assignment(
                    name: VariableName("x"),
                    value: Scalar(Word(
                      value: "\'hello world\'",
                      loc: "[location]",
                    )),
                    loc: "[location]",
                  ), Word(
                    value: "x=\'hello world\'",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
