crates/cash-parser/src/parser/tests/snapshots/cash_parser__parser__tests__assignments__parse_export_assignment.snap
---
source: cash-parser/src/parser/tests/assignments.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "export VAR=value",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "export",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  AssignmentWord(Assignment(
                    name: VariableName("VAR"),
                    value: Scalar(Word(
                      value: "value",
                      loc: "[location]",
                    )),
                    loc: "[location]",
                  ), Word(
                    value: "VAR=value",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
